--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "fs": "^0.0.1-security",
+    "less-loader": "^11.1.0",
+    "svg-sprite-loader": "^6.0.11",
     "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@types/node": "^18.11.12",
+    "@types/node": "^18.14.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
